frontend url env corrected

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_URI='mongodb+srv://nmsyammohan:OeR0XplCr62cBQnN@cluster0.nrwm6.mongodb.net/'
 ENV='development'
 JWT_SECRET='Secret-key'
 JWT_EXPIRES_IN="1d"
+FRONTEND_URL="http://localhost:5173"
