--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "vercel-build": "node app.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
