--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon app.js",
-    "vercel-build": "node app.js"
+    "start": "node app.js",
+    "vercel-build": "npm install"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
